refactor: Path 받아오는 방식 변경
* 윈도우에서 파싱하는 방식이 달라서 수정 필요